swaggoで認証系エンドポイントのドキュメントを作成
